Fix bug that made the result boxes to not wrap on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ body {
 
 #scoreboard {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     font-size: 1.8rem;
 }
